# latte

./: .env  .gitignore  Cargo.toml  Makefile  README.md  test_e2e.sh
frontend/: Cargo.toml
frontend/src/: ast.rs  env.rs  error.rs  frontend.rs  latte.cf  latte.lalrpop  latte.rs  lib.rs  location.rs  parser.rs  sourcemap.rs  visitor.rs
latte_lib/: Cargo.toml
latte_lib/src/: frontend.rs  lib.rs
latte_lib/src/backend/compiler/: compiler.rs  display.rs  ir.rs  llvm.rs  mod.rs  visitor.rs
latte_lib/src/compiler/: compiler.rs  ir.rs  llvm.rs  mod.rs  visitor.rs
latte_lib/src/error/: mod.rs
latte_lib/src/frontend/: error.rs  mod.rs
latte_lib/src/frontend/parser/: ast.rs  latte.lalrpop  latte.rs  mod.rs
latte_lib/src/frontend/preprocessor/: ast_optimizer.rs  mod.rs  sourcemap.rs
latte_lib/src/frontend/typechecker/: env.rs  mapper.rs  mod.rs  typechecker.rs  util.rs
latte_lib/src/location/: mod.rs  sourcemap.rs
latte_lib/src/meta/: location_meta.rs  mod.rs  type_meta.rs
latte_lib/src/parser/: ast.rs  latte.lalrpop  latte.rs  mod.rs
latte_lib/src/preprocessor/: mod.rs  sourcemap.rs
latte_lib/src/processor/: envbuilder.rs  typechecker.rs
latte_lib/src/typechecker/: env.rs  mapper.rs  mod.rs  typechecker.rs  util.rs  visitor.rs
latte_lib/src/util/: env.rs  mapper.rs  mod.rs  visitor.rs
lib/: runtime.c
parser/: Cargo.toml
parser/src/: ast.rs  latte.cf  latte.lalrpop  latte.rs  lib.rs
src/: build.rs  lib.rs  main.rs
src/backend/: builder.rs  compiler.rs  mod.rs
src/backend/compiler/: class.rs  compiler.rs  display.rs  function.rs  ir.rs  mod.rs  program.rs  visitor.rs
src/backend/context/: block.rs  function.rs  global.rs  mod.rs
src/backend/ir/: display.rs  ir.rs  mod.rs
src/frontend/: error.rs  mod.rs
src/frontend/parser/: ast.rs  latte.lalrpop  latte.rs  mod.rs
src/frontend/preprocessor/: ast_optimizer.rs  block_organizer.rs  char_offset.rs  mod.rs
src/frontend/typechecker/: env.rs  mapper.rs  mod.rs  typechecker.rs  util.rs
src/meta/: location_meta.rs  mod.rs  type_meta.rs
src/util/: env.rs  mapper.rs  visitor.rs
tests/: e2e.rs  frontend.rs  parser.rs
tests/good/: core004.ll
