[package]
# compiler executables
name = "latte"
version = "0.1.0"
authors = ["Krzysztof Kowalczyk <k.kowaalczyk@gmail.com>"]
edition = "2018"

[lib]
# utility functions for compiler executables
name = "latte_utils"
path = "src/lib.rs"

[workspace]
members = [".", "latte_lib"]

[dependencies]
# actual compiler & frontend logic implementation
latte_lib = {path = "latte_lib", version = "0.1.0"}

[dev-dependencies]
# compile-time embedding of files from source directories, used for testing
include_dir = "0.4.1"
