[package]
# compiler executables
name = "latc_llvm"
version = "0.2.0"
authors = ["Krzysztof Kowalczyk <k.kowaalczyk@gmail.com>"]
edition = "2018"

[lib]
# implementation of latte: compiler, frontend and
name = "latte"
version = "0.2.0"
authors = ["Krzysztof Kowalczyk <k.kowaalczyk@gmail.com>"]
path = "src/lib.rs"

[workspace]
members = ["."]

[dependencies]
lalrpop-util = "0.17.2"  # error recovery from lalrpop-generated parser
regex = "1.3.1"  # lalrpop dependency used in generated parser
codemap = "0.1.2"  # mapping byte offset from lalrpop to (file, line, column)
itertools = "0.8.2"  # for Iterator.join(sep) - efficient string concatenation


[dev-dependencies]
lalrpop = "0.17.2"  # parser generator
include_dir = "0.4.1" # includes file contents in compiled binary, used for testing
