[package]
name = "frontend"
version = "0.1.0"
authors = ["Krzysztof Kowalczyk <k.kowaalczyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.17.2"
regex = "0.2.0"
codemap = "0.1.2"

[build-dependencies]
lalrpop = "0.17.2"
