[package]
name = "latte_lib"
version = "0.2.0"
authors = ["Krzysztof Kowalczyk <k.kowaalczyk@gmail.com>"]
edition = "2018"

[dependencies]
lalrpop-util = "0.17.2"  # error recovery from lalrpop-generated parser
regex = "1.3.1"  # lalrpop dependency used in generated parser
codemap = "0.1.2"  # mapping byte offset from lalrpop to (file, line, column)
itertools = "0.8.2"  # for Iterator.join(sep) - efficient string concatenation


[build-dependencies]
lalrpop = "0.17.2"  # parser generator
